fixed a couple of bugs, added collapse to docked pages
We really need to style all those things :)

--- a/styles/waend.css
+++ b/styles/waend.css
@@ -588,25 +588,41 @@ body {
   left: 290px;
   bottom: 34px;
   width: 600px;
-  height: 50%;
+  max-height: 80%;
   display: block;
-  overflow-y: hidden;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 .wc-element.wc-pages.wc-hide {
   left: -600px;
   transition: all 0.8s cubic-bezier(0.8, 0.04, 0.45, 0.98);
 }
+.wc-element.wc-pages .wc-title {
+  width: 100%;
+  background-color: transparent;
+  padding-bottom: 3px;
+  color: #8A8A8A;
+  text-align: left;
+}
+.wc-element.wc-pages .wc-title .wc-page-title {
+  text-shadow: none;
+  margin-bottom: 6px;
+  font-size: 13pt;
+}
+.wc-element.wc-pages .wc-title .wc-page-docker {
+  text-align: right;
+  cursor: pointer;
+  font-size: 11pt;
+  padding-left: 1em;
+}
+.wc-element.wc-pages .wc-title .wc-page-docker:hover {
+  color: black;
+}
 .wc-element.wc-pages .wc-page {
   display: block;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
   padding: 6px 12px;
-  background-color: transparent;
   overflow-y: auto;
   overflow-x: hidden;
-  z-index: 10;
 }
 .wc-element.wc-pages .wc-page.wc-active {
   opacity: 1;
@@ -620,16 +636,6 @@ body {
 }
 .wc-element.wc-pages .wc-page.hidden {
   display: none;
-}
-.wc-element.wc-pages .wc-page .wc-page-title {
-  width: 100%;
-  background-color: transparent;
-  padding-bottom: 3px;
-  color: #8A8A8A;
-  font-size: 11pt;
-  text-align: left;
-  text-shadow: none;
-  margin-bottom: 6px;
 }
 .wc-element.wc-pages .wc-line {
   font-size: 10pt;
@@ -696,14 +702,35 @@ body {
   right: 0;
   top: 0;
   width: 200px;
+  max-height: 100%;
+  padding: 12px 0;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
-.wc-element.wc-dock .wc-dock-page .wc-close {
-  text-align: center;
-  cursor: pointer;
+.wc-element.wc-dock.wc-hide {
+  right: -200px;
+  transition: all 0.8s cubic-bezier(0.8, 0.04, 0.45, 0.98);
+}
+.wc-element.wc-dock .wc-dock-page .wc-dock-buttons {
   font-weight: bold;
+  text-align: center;
+}
+.wc-element.wc-dock .wc-dock-page .wc-dock-buttons .wc-close {
+  display: inline-block;
+  cursor: pointer;
+}
+.wc-element.wc-dock .wc-dock-page .wc-dock-buttons .wc-collapse {
+  display: inline-block;
+  cursor: pointer;
 }
 .wc-element.wc-dock .wc-dock-page .wc-page {
   font-size: 60%;
+  height: auto;
+  overflow: hidden;
+}
+.wc-element.wc-dock .wc-dock-page .wc-page.wc-collapsed {
+  height: 0;
+  transition: all 0.8s cubic-bezier(0.8, 0.04, 0.45, 0.98);
 }
 .wc-element.wc-container {
   position: absolute;
@@ -856,35 +883,6 @@ body {
 .wc-loader .wc-loader-text {
   text-align: center;
   font-size: 200%;
-}
-.wc-title {
-  position: absolute;
-  top: 12px;
-  left: 12px;
-  font-size: 10pt;
-  text-shadow: 0 0 6px #fff;
-}
-.wc-title a:link {
-  display: inline-block;
-  font-size: 100%;
-  text-decoration: none !important;
-  margin-right: 3px;
-  height: 20px;
-  line-height: 20px;
-  text-shadow: 0 0 10px #ffffff, 0 0 10px #ffffff, 0 0 10px #ffffff, 0 0 10px #ffffff, 0 0 10px #ffffff, 0 0 10px #ffffff, 1px 1px #ffffff, -1px -1px 0 #ffffff, 1px -1px 0 #ffffff, -1px 1px 0 #ffffff;
-}
-.wc-title .wc-context-user:before {
-  content: "";
-  width: calc(100vw - 100vh);
-  min-width: 250px;
-  display: inline-block;
-}
-.wc-title a:last-child {
-  font-size: 12pt;
-}
-.wc-title a:hover {
-  border-bottom: 1px solid #282f35;
-  cursor: pointer;
 }
 .navigate-buttons {
   position: absolute;
